# singular

./: .gitignore  LICENSE  README.md  policy.yaml  pyproject.toml  viz.py
action/: __init__.py  registry.py  sandbox_runner.py
benchmarks/: adaptation.json  code.json  interaction.json  memoire.json  planification.json  raisonnement.json  weights.json
configs/: agi_kpis.yaml  host_sensors.yaml  life_definition.yaml  lifecycle.yaml  routines.yaml  starter_skills.yaml
docs/: agi_target_spec.md  dashboard-recovery-plan.md  dashboard.md  functional-reliability-matrix.md  generations_registry.md  governance_circuit_breaker.md  graine_integration.md  host_metrics.md  perception_signals_intrinsic_goals.md  policy_customization.md  release_v2.md  safe_restart.md  technical_life_status.md  technical_memory_artifacts.md  tutorial_create_life.en.md  tutorial_create_life.fr.md  vital_lifecycle_rules.md
graine/: GOVERNANCE.md  README.md  REPRODUCIBILITY.md  SECURITY.md
interaction/: tts_engine.py
life/: __init__.py  death.py  loop.py  meta_mutation_log  quest.py  reproduction.py  sandbox.py  score.py  synthesis.py
mem/: benchmark_summary.json  goals.json  quests_state.json  skills.json  world_state.json
mind/: llm_adapter.py  state_model.py
observability/: __init__.py  audit_log.py
runs/: .gitignore
scripts/: check_coverage_thresholds.py  profile_life_loop.py  run_benchmarks.py  run_dashboard.py
security/: __init__.py  immune_response.py  policy_engine.py
skills/: addition.py  multiplication.py  subtraction.py
tests/: conftest.py  test_action_sandbox_runner.py  test_agent_action_noise.py  test_agent_motivation.py  test_atomic_writes.py  test_audit_log.py  test_autonomy_metrics.py  test_beliefs_store.py  test_benchmarks_runner.py  test_birth_starter_profiles.py  test_cli_beliefs.py  test_cli_birth.py  test_cli_config.py  test_cli_diagnose_sandbox.py  test_cli_doctor.py  test_cli_lives.py  test_cli_orchestrate.py  test_cli_quest.py  test_cli_retention.py  test_cli_uninstall.py  test_cli_watch.py  test_coevolution.py  test_cognition_reflect.py  test_const_tune.py  (+88 more)
(+258 files in other folders)
