[project]
name = "singular"
version = "0.1.0"
description = "Singular project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{name = "Singular Contributors"}]
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
