[project]
name = "singular"
version = "0.1.0"
description = "Singular project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Singular Contributors" }]
dependencies = [
    # Runtime policy: explicit lower bounds + conservative upper bounds.
    "requests>=2.31,<3",
]

[project.optional-dependencies]
# Optional dependency policy mirrors runtime constraints:
# - pin minimum known-compatible versions
# - keep major-version upper caps for safer updates
yaml = ["pyyaml>=6.0,<7"]
dashboard = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
]
viz = ["matplotlib>=3.8,<4"]

[project.scripts]
singular = "singular.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]
extend-exclude = '''
(
  ^/src/graine/target/tests/test_evaluate\.py
| ^/src/graine/target/tests/test_reduce_sum\.py
| ^/src/singular/__main__\.py
| ^/src/singular/life/reproduction\.py
| ^/tests/test_mutation_absurde\.py
)
'''
